eosio/telos-mainnet/telos-mainnet-eosio.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eosio-telos-mainnet
  namespace: dfuse
  labels:
    app: eosio
    env: telos-mainnet
spec:
  replicas: 1
  selector:
    matchLabels:
      app: eosio
      env: telos-mainnet
  template:
    metadata:
      namespace: dfuse
      labels:
        app: eosio
        env: telos-mainnet
    spec:
      containers:
      - name: eosio
        image: eosio/eos:release_2.0.x
        imagePullPolicy: IfNotPresent
        command: ["nodeos"]
        args: ["-e", "-p", "eosio", "-d", "/data", "--config-dir", "/config"]
        ports:
        - containerPort: 8888
          name: nodeos-api
          protocol: TCP
        volumeMounts:
        - name: eosio-blocks-telos-mainnet
          mountPath: /data

        - name: eosio-mindreader-config-ini
          mountPath: /config/config.ini
          subPath: config.ini

        - name: eosio-mindreader-genesis-json
          mountPath: /config/genesis.json
          subPath: genesis.json

        - name: telos-mainnet-preactivate-feature
          mountPath: /config/protocol_features/BUILTIN-PREACTIVATE_FEATURE.json
          subPath: BUILTIN-PREACTIVATE_FEATURE.json

      volumes:
      - name: eosio-blocks-telos-mainnet
        persistentVolumeClaim:
          claimName: eosio-blocks-telos-mainnet

      - name: eosio-mindreader-config-ini
        configMap:
          name: telos-mainnet-config-ini

      - name: eosio-mindreader-genesis-json
        configMap:
          name: telos-mainnet-genesis-json
          
      - name: telos-mainnet-preactivate-feature
        configMap: 
          name: telos-mainnet-preactivate-feature
---
apiVersion: v1
kind: Service
metadata:
  name: eosio-telos-mainnet
  namespace: dfuse
  labels:
    app: eosio
    env: telos-mainnet
spec:
  ports:
  - port: 8888
    targetPort: 8888
    protocol: TCP
    name: nodeos-api
  selector:
    app: eosio
    env: telos-mainnet
